--- a/myblog-portal/myblog-portal-service/pom.xml
+++ b/myblog-portal/myblog-portal-service/pom.xml
@@ -75,6 +75,10 @@
             <groupId>com.github.sgroschupf</groupId>
             <artifactId>zkclient</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-all</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
